--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
         <li class="upward"><a href="#">Services</a></li>
         <li class="forward"><a href="#">Projects</a></li>
     </ul>
+    <h1> Birthdays</h1>
     <p>
         Shaina Jones Magrone ~ January 27
 
